# banana-prediction-cnn

./: README.md  context.txt  dir_struc.txt  pyproject.toml  requirements.txt
app/: app.py
notebooks/: 01_data_exploration.ipynb  02.1_model_explored.ipynb  02_model_experimentation.ipynb  03_results_analysis.ipynb
reports/: report.md
src/: data_preprocessing.py  data_processing.py  model.py  test.py  train.py
